minor visual fix for input field spacing

--- a/src/app/herobuilder/herobuilder.component.scss
+++ b/src/app/herobuilder/herobuilder.component.scss
@@ -152,6 +152,9 @@
   }
 }
 
+::ng-deep .mat-form-field-infix{
+border-top: .4em solid transparent;
+}
 .code-wrapper{
   display: flex;
   justify-content: center;
